--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
 bitflags = "2.10"
 xcursor = "0.3"
+anyhow = "1.0"
+bytemuck = { version = "1.0", features = ["derive"] }
+drm-ffi = "0.9"
+libc = "0.2"
+libdisplay-info = "0.3"
+calloop = { version = "0.14", features = ["executor", "futures-io", "signals"] }
