fix: stabilize fullscreen game lifecycle and restore Steam immediately on close
1- remap eligible current-workspace windows at layout start so host windows reappear without workspace switching
  2- keep fullscreen owner placement/stacking consistent across map/unmap transitions
  3- apply fullscreen render/input ordering on fullscreen request (pre-ready) to avoid bar overlap
  4- increase Wayland client socket buffers to reduce Xwayland backpressure-induced dropouts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ smithay = { git = "https://github.com/Smithay/smithay/", default-features = fals
   "wayland_frontend",
 ] }
 smithay-drm-extras = { git = "https://github.com/Smithay/smithay/" }
-tracing = "0.1"
+tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
 bitflags = "2.10"
